用户中心相关界面和产品列表界面

--- a/user_account.html
+++ b/user_account.html
@@ -359,7 +359,7 @@
                                     </div>
                                     <div class="header-content-left col-lg-2 col-md-2 col-sm-2 col-xs-12 v-grid">
                                         <div class="logo">
-                                            <a href="images/index.php/" title="mt_bakery">
+                                            <a href="index.html" title="mt_bakery">
                                                 <img class="img-responsive" src="images/logo.png"
                                                 alt="mt_bakery" />
                                             </a>
@@ -657,7 +657,7 @@
                       <div class="block-content">
                         <ul>
                           <li>
-                            <a href="">
+                            <a href="user_center.html">
                               欢迎页
                             </a>
                           </li>
@@ -667,17 +667,17 @@
                             </strong>
                           </li>
                           <li>
-                            <a href="">
+                            <a href="user_address_show.html">
                              收货地址
                             </a>
                           </li>
                           <li>
-                            <a href="#">
+                            <a href="user_myorder.html">
                               我的订单
                             </a>
                           </li>
                           <li>
-                            <a href="#">
+                            <a href="user_store.html">
                               我的收藏
                             </a>
                           </li>
@@ -796,7 +796,7 @@
                             * 必填字段
                           </p>
                           <p class="back-link">
-                            <a href="#">
+                            <a href="user_center.html">
                               <small>
                                 &laquo;
                               </small>
