--- a/user_center.html
+++ b/user_center.html
@@ -370,7 +370,7 @@
                             </div>
                             <div class="header-content-left col-lg-2 col-md-2 col-sm-2 col-xs-12 v-grid">
                                 <div class="logo">
-                                    <a href="images/index.php/" title="mt_bakery">
+                                    <a href="index.html" title="mt_bakery">
                                         <img class="img-responsive" src="images/logo.png"
                                         alt="mt_bakery" />
                                     </a>
@@ -673,22 +673,22 @@
                             </strong>
                           </li>
                           <li>
-                            <a href="#">
+                            <a href="user_account.html">
                               账户信息
                             </a>
                           </li>
                           <li>
-                            <a href="#">
+                            <a href="user_address_show.html">
                               收货地址
                             </a>
                           </li>
                           <li>
-                            <a href="#">
+                            <a href="user_myorder.html">
                               我的订单
                             </a>
                           </li>
                           <li>
-                            <a href="#">
+                            <a href="user_store.html">
                               我的收藏
                             </a>
                           </li>
@@ -718,7 +718,7 @@
                             <h2>
                               最近订单
                             </h2>
-                            <a href="#">
+                            <a href="user_myorder.html">
                               查看全部
                             </a>
                           </div>
@@ -797,7 +797,7 @@
                                   <h3>
                                     联系信息
                                   </h3>
-                                  <a href="#">
+                                  <a href="user_account.html">
                                     编辑
                                   </a>
                                 </div>
@@ -807,7 +807,7 @@
                                     <br />
                                     yuhongjie@mointe.cn
                                     <br />
-                                    <a href="#">
+                                    <a href="user_account.html">
                                       修改密码
                                     </a>
                                   </p>
@@ -821,7 +821,7 @@
                                 <h3>
                                   地址信息
                                 </h3>
-                                <a href="#">
+                                <a href="user_address_show.html">
                                   管理地址
                                 </a>
                               </div>
@@ -843,7 +843,7 @@
                                     <br/>
                                     电话: 13303360636
                                     <br />
-                                    <a href="#">
+                                    <a href="user_address.html">
                                       编辑
                                     </a>
                                   </address>
@@ -865,7 +865,7 @@
                                     <br/>
                                     电话: 13303360636
                                     <br />
-                                    <a href="#">
+                                    <a href="user_address.html">
                                       编辑
                                     </a>
                                   </address>
