--- a/index.html
+++ b/index.html
@@ -715,7 +715,7 @@
                                         <ul class="products-grid ">
                                             <li class="item">
                                                 <div class="item-upsell">
-                                                    <a class="product-image" href="#"
+                                                    <a class="product-image" href="detail.html"
                                                     title=" 薇茜甜点">
                                                         <span class="product-new-label">
                                                             New
@@ -724,7 +724,7 @@
                                                         width="262" height="309" alt="薇茜甜点" />
                                                     </a>
                                                     <h3 class="product-name">
-                                                        <a href="#" title=" 薇茜甜点">
+                                                        <a href="detail.html" title=" 薇茜甜点">
                                                             薇茜甜点
                                                         </a>
                                                     </h3>
@@ -747,7 +747,7 @@
                                                                 </a>
                                                             </div>
                                                             <div class="compare">
-                                                                <a href="#"
+                                                                <a href="detail.html"
                                                                 data-id="13" title="详情" data-placement="left" class="link-compare  mt-tooltip">
                                                                     <i class="fa fa-expand">
                                                                     </i>
@@ -773,7 +773,7 @@
                                             </li>
                                             <li class="item">
                                                 <div class="item-upsell">
-                                                    <a class="product-image" href="#"
+                                                    <a class="product-image" href="detail.html"
                                                     title="薇茜甜点">
                                                         <span class="product-new-label">
                                                             New
@@ -782,7 +782,7 @@
                                                         width="262" height="309" alt="薇茜甜点" />
                                                     </a>
                                                     <h3 class="product-name">
-                                                        <a href="#"
+                                                        <a href="detail.html"
                                                         title="薇茜甜点">
                                                             薇茜甜点
                                                         </a>
@@ -812,7 +812,7 @@
                                                                 </a>
                                                             </div>
                                                             <div class="compare">
-                                                                <a href="#"
+                                                                <a href="detail.html"
                                                                 data-id="11" title="详情" data-placement="left" class="link-compare  mt-tooltip">
                                                                     <i class="fa fa-expand">
                                                                     </i>
@@ -838,7 +838,7 @@
                                             </li>
                                             <li class="item">
                                                 <div class="item-upsell">
-                                                    <a class="product-image" href="#"
+                                                    <a class="product-image" href="detail.html"
                                                     title=" 薇茜甜点">
                                                         <span class="product-new-label">
                                                             New
@@ -847,7 +847,7 @@
                                                         width="262" height="309" alt=" 薇茜甜点 " />
                                                     </a>
                                                     <h3 class="product-name">
-                                                        <a href="#"
+                                                        <a href="detail.html"
                                                         title=" 薇茜甜点 ">
                                                             薇茜甜点
                                                         </a>
@@ -871,7 +871,7 @@
                                                                 </a>
                                                             </div>
                                                             <div class="compare">
-                                                                <a href="#"
+                                                                <a href="detail.html"
                                                                 data-id="14" title="详情" data-placement="left" class="link-compare  mt-tooltip">
                                                                     <i class="fa fa-expand">
                                                                     </i>
