--- a/user_address_show.html
+++ b/user_address_show.html
@@ -4,7 +4,7 @@
   <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     <title>
-      我的订单
+      收货地址
     </title>
     <meta name="description" content="Default Description" />
     <meta name="keywords" content="Magento, Varien, E-commerce" />
@@ -28,7 +28,6 @@
             </script>
           <![endif]-->
           <link rel="stylesheet" type="text/css" href="css/home.css" />
-          <link rel="stylesheet" type="text/css" href="css/user-center.css" />
           <link rel="stylesheet" type="text/css" href="css/owl.carousel.css" />
           <link rel="stylesheet" type="text/css" href="css/owl.theme.css" />
           <link rel="stylesheet" type="text/css" href="css/owl.transitions.css"
@@ -604,253 +603,187 @@
                         // });
                     </script>
                 </header>
-       <section class="main-container col2-left-layout">
-         <div class="show-grid-slide show-slide-all">
-           <div class="container">
-             <div class="row show-grid">
-               <div class="mt-revolution-slider col-lg-9 col-md-9 col-sm-9 col-xs-12">
-                 <div class="mt-preface">
-                 </div>
-               </div>
-               <div class="main_slide_right col-lg-3 col-md-3 col-sm-3">
-               </div>
-             </div>
-           </div>
-         </div>
-         <div class="">
-           <div class="container">
-             <div class="main_content">
-               <div class="row show-grid">
-                 <div class="col-lg-12">
-                 </div>
-               </div>
-             </div>
-           </div>
-         </div>
-         <div class="main-top">
-           <div class="container">
-             <div class="main">
-               <div class="row show-grid">
-                 <div class="col-lg-12">
-                 </div>
-               </div>
-             </div>
-           </div>
-         </div>
-         <div class="container-main">
-           <div class="main-content container">
-             <div class="row main">
-               <div class="col-lg-3 col-md-3 col-sm-3 col-pull-3">
-                 <div class="col-left sidebar">
-                   <div class="block block-account">
-                     <div class="block-title">
-                       <strong>
-                         <span>
-                           我的账号
-                         </span>
-                       </strong>
-                     </div>
-                     <div class="block-content">
-                       <ul>
-                         <li>
-                           <a href="user_center.html">
-                             欢迎页
-                           </a>
-                         </li>
-                         <li>
-                           <a href="user_account.html">
-                             账户信息
-                           </a>
-                         </li>
-                         <li>
-                           <a href="user_address_show.html">
-                             收货地址
-                           </a>
-                         </li>
-                         <li class="current">
-                           <strong>
-                            我的订单
-                           </strong>
-                         </li>
-                         <li>
-                           <a href="user_store.html">
-                             我的收藏
-                           </a>
-                         </li>
-                       </ul>
-                     </div>
-                   </div>
-                 </div>
-               </div>
-               <div class="col-lg-9 col-md-9 col-sm-9 col-push-9 col-xs-12">
-                 <div class="col-main">
-                   <div class="my-account">
-                     <div class="page-title">
-                       <h1>
-                        我的订单
-                       </h1>
-                     </div>
-                     <div class="pager">
-                       <p class="amount">
-                         <strong>
-                           总共1条记录
-                         </strong>
-                       </p>
-                       <div class="limiter">
-                         <label>
-                           显示
-                         </label>
-                         <select onchange="setLocation(this.value)">
-                           <option value=""
-                           selected="selected">
-                             10
-                           </option>
-                           <option value="">
-                             20
-                           </option>
-                           <option value="">
-                             50
-                           </option>
-                         </select>
-                        每页
-                       </div>
-                     </div>
-                     <table class="data-table" id="my-orders-table">
-                       <col width="1" />
-                       <col width="1" />
-                       <col />
-                       <col width="1" />
-                       <col width="1" />
-                       <col width="1" />
-                       <thead>
-                         <tr>
-                           <th>
-                             订单号
-                           </th>
-                           <th>
-                             订单时间
-                           </th>
-                           <th class="user-home-price">
-                             <span class="nobr">
-                               订单总金额
-                             </span>
-                           </th>
-                           <th>
-                             <span class="nobr">
-                               订单状态
-                             </span>
-                           </th>
-                           <th>
-                             操作
-                           </th>
-                         </tr>
-                       </thead>
-                       <tbody>
-                         <tr>
-                           <td>
-                            <a href="">100000004</a> 
-                           </td>
-                           <td>
-                             <span class="nobr">
-                               3/12/2015
-                             </span>
-                           </td>
-                           <td>
-                             <span class="price">
-                               ￥17.00
-                             </span>
-                           </td>
-                           <td>
-                             <em>
-                               未付款
-                             </em>
-                           </td>
-                           <td class="a-center">
-                             <span class="nobr">
-                               <a href="#">
-                                取消订单
-                               </a>
-                             </span>
-                           </td>
-                         </tr>
-                       </tbody>
-                     </table>
-                     <script type="text/javascript">
-                       decorateTable('my-orders-table');
-                     </script>
-                     <div class="pager">
-                       <p class="amount">
-                         <strong>
-                          总共1条记录
-                         </strong>
-                       </p>
-                       <div class="limiter">
-                         <label>
-                           显示
-                         </label>
-                         <select onchange="setLocation(this.value)">
-                           <option value="#"
-                           selected="selected">
-                             10
-                           </option>
-                           <option value="#">
-                             20
-                           </option>
-                           <option value="">
-                             50
-                           </option>
-                         </select>
-                         每页
-                       </div>
-                     </div>
-                     <div class="buttons-set">
-                       <p class="back-link">
-                         <a href="user_center.html">
-                           <small>
-                             &laquo;
-                           </small>
-                           返回
-                         </a>
-                       </p>
-                     </div>
-                   </div>
-                 </div>
-               </div>
-             </div>
-           </div>
-         </div>
-         <div class="parallax">
-           <div class="main">
-             <div class="row show-grid">
-               <div class="mt-parallax mt-parallax-cars">
-               </div>
-             </div>
-           </div>
-         </div>
-         <div class="mt-bottom">
-           <div class="container">
-             <div class="main">
-               <div class="row show-grid">
-                 <div class="col-lg-12">
-                 </div>
-               </div>
-             </div>
-           </div>
-         </div>
-         <div class="mt-postscript">
-           <div class="container">
-             <div class="main">
-               <div class="row show-grid">
-                 <div class="col-lg-12">
-                   <div class="mt-postscript">
-                   </div>
-                 </div>
-               </div>
-             </div>
-           </div>
-         </div>
-       </section>
-        <footer class="footer-container">
+                <section class="main-container col2-left-layout">
+                  <div class="show-grid-slide show-slide-all">
+                    <div class="container">
+                      <div class="row show-grid">
+                        <div class="mt-revolution-slider col-lg-9 col-md-9 col-sm-9 col-xs-12">
+                          <div class="mt-preface">
+                          </div>
+                        </div>
+                        <div class="main_slide_right col-lg-3 col-md-3 col-sm-3">
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+                  <div class="">
+                    <div class="container">
+                      <div class="main_content">
+                        <div class="row show-grid">
+                          <div class="col-lg-12">
+                          </div>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+                  <div class="main-top">
+                    <div class="container">
+                      <div class="main">
+                        <div class="row show-grid">
+                          <div class="col-lg-12">
+                          </div>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+                  <div class="container-main">
+                    <div class="main-content container">
+                      <div class="row main">
+                        <div class="col-lg-3 col-md-3 col-sm-3 col-pull-3">
+                          <div class="col-left sidebar">
+                            <div class="block block-account">
+                              <div class="block-title">
+                                <strong>
+                                  <span>
+                                    我的账号
+                                  </span>
+                                </strong>
+                              </div>
+                              <div class="block-content">
+                                <ul>
+                                  <li>
+                                    <a href="user_center.html">
+                                      欢迎页
+                                    </a>
+                                  </li>
+                                  <li>
+                                    <a href="user_account.html">
+                                      账户信息
+                                    </a>
+                                  </li>
+                                  <li class="current">
+                                    <strong>
+                                      收货地址
+                                    </strong>
+                                  </li>
+                                  <li>
+                                    <a href="user_myorder.html">
+                                      我的订单
+                                    </a>
+                                  </li>
+                                  <li>
+                                    <a href="user_store.html">
+                                      我的收藏
+                                    </a>
+                                  </li>
+                                </ul>
+                              </div>
+                            </div>
+                          </div>
+                        </div>
+                        <div class="col-lg-9 col-md-9 col-sm-9 col-push-9 col-xs-12">
+                          <div class="col-main">
+                            <div class="my-account">
+                              <div class="page-title title-buttons">
+                                <h1>
+                                 收货地址信息
+                                </h1>
+                                <!-- 跳转到 user_address.html -->
+                                <button type="button" title="添加新收货地址"  class="button" >
+                                  <span>
+                                    <span>
+                                      添加新收货地址
+                                    </span>
+                                  </span>
+                                </button>
+                              </div>
+                              <div class="col2-set addresses-list">
+                                <div class="col-1 addresses-primary">
+                                  <h2>
+                                    收货地址
+                                  </h2>
+                                  <ol>
+                                    <li class="item">
+                                      <h3>
+                                        收货地址一
+                                      </h3>
+                                      <address>
+                                        收货人：于宏杰
+                                        <br/>
+                                        电话：13303360636
+                                        <br />
+                                        邮编：051130
+                                        <br />
+                                        地址：北京市朝阳区东坝中路奥林匹克花园
+                                      </address>
+                                      <p>
+                                        <a href="user_address.html">
+                                          修改地址信息
+                                        </a>
+                                      </p>
+                                    </li>
+                                  </ol>
+                                </div>
+                              </div>
+                              <div class="buttons-set">
+                                <p class="back-link">
+                                  <a href="user_center.html">
+                                    <small>
+                                      &laquo;
+                                    </small>
+                                    返回
+                                  </a>
+                                </p>
+                              </div>
+                              <script type="text/javascript">
+                                //<![CDATA[
+                                function deleteAddress(addressId) {
+                                  if (confirm('Are you sure you want to delete this address?')) {
+                                    window.location = '#' + addressId;
+                                  }
+                                  return false;
+                                }
+                                //]]>
+                                
+                              </script>
+                            </div>
+                          </div>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+                  <div class="parallax">
+                    <div class="main">
+                      <div class="row show-grid">
+                        <div class="mt-parallax mt-parallax-cars">
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+                  <div class="mt-bottom">
+                    <div class="container">
+                      <div class="main">
+                        <div class="row show-grid">
+                          <div class="col-lg-12">
+                          </div>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+                  <div class="mt-postscript">
+                    <div class="container">
+                      <div class="main">
+                        <div class="row show-grid">
+                          <div class="col-lg-12">
+                            <div class="mt-postscript">
+                            </div>
+                          </div>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+                </section>
+                <footer class="footer-container">
                     <div class="footer-top">
                         <div class="container">
                             <div class="footer">
