修改两个产品列表页面
product_list2.html和product_list.html及相关css文件

--- a/index.html
+++ b/index.html
@@ -358,7 +358,7 @@
                                                                 </div>
                                                                 <div class="mt-main-menu">
                                                                     <ul id="mtnav" class="megamenu">
-                                                                        <li class="level0 active nav-1 level-top first parent parent-sub">
+                                                                        <li class="level0  nav-1 level-top first parent parent-sub">
                                                                             <i class="fa fa-angle-down">
                                                                             </i>
                                                                             <a href="#" class="level-top">
@@ -794,12 +794,6 @@
                                                                    ￥120.00
                                                                 </span>
                                                             </span>
-                                                        </div>
-                                                        <div class="ratings">
-                                                            <div class="rating-box">
-                                                                <div class="rating" style="width:73%">
-                                                                </div>
-                                                            </div>
                                                         </div>
                                                     </div>
                                                     <div class="confix-produclist">
