--- a/index.html
+++ b/index.html
@@ -336,7 +336,7 @@
                                     </div>
                                     <div class="header-content-left col-lg-2 col-md-2 col-sm-2 col-xs-12 v-grid">
                                         <div class="logo">
-                                            <a href="images/index.php/" title="mt_bakery">
+                                            <a href="index.html" title="mt_bakery">
                                                 <img class="img-responsive" src="images/logo.png"
                                                 alt="mt_bakery" />
                                             </a>
