修改详情页面链接，去掉外部链接

--- a/index.html
+++ b/index.html
@@ -351,7 +351,7 @@
                                                             <!-- navigation BOF -->
                                                             <div class="mt-navigation hidden-xs">
                                                                 <div class="logo-sticky col-lg-3 col-md-3 col-sm-3" style="display: none;">
-                                                                    <a href="#">
+                                                                    <a href="index.html">
                                                                         <img class="img-sticky img-responsive" src="images/logo.png"
                                                                         alt="mt_bakery" />
                                                                     </a>
