--- a/detail.html
+++ b/detail.html
@@ -3,7 +3,7 @@
  <head> 
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8" /> 
   <title>
-      Sweet Deliciousness
+      详情
     </title> 
   <meta name="description" content="In pharetra urna elit, id venenatis ipsum ullamcorper ut. Donec commodo ultrices risus; non ornare lacus sagittis vel. Praesent vulputate augue vitae dapibus semper? Maecenas congue consectetur orci non rhoncus. Phasellus vestibulum ultrices justo, at tri" /> 
   <meta name="keywords" content="Magento, Varien, E-commerce" /> 
@@ -252,7 +252,7 @@
         </div> 
         <div class="header-content-left col-lg-2 col-md-2 col-sm-2 col-xs-12 v-grid"> 
          <div class="logo"> 
-          <a href="images/index.php/" title="mt_bakery"> <img class="img-responsive" src="images/logo.png" alt="mt_bakery" /> </a> 
+          <a href="index.html" title="mt_bakery"> <img class="img-responsive" src="images/logo.png" alt="mt_bakery" /> </a> 
          </div> 
         </div> 
         <div class="header-content-right col-lg-10 col-md-10 col-sm-10 col-xs-12"> 
@@ -679,77 +679,6 @@
           </div> 
           <script type="text/javascript" src="js/frontend.js">
                     </script> 
-          <script type="text/javascript">
-                      new MT.Widget('widget-836c4fb1dfc48a2218ca5a58609bc0e0', {
-                        animation: {
-                          "enable": false,
-                          "animationName": null,
-                          "animationDelay": 300,
-                          "itemSelector": null,
-                          "engineSrc": "http:\/\/mt-bebakery.magentheme.com\/js\/mt\/extensions\/wow\/wow.js"
-                        },
-                        parallax: {
-                          "enable": false,
-                          "type": null,
-                          "overlay": null,
-                          "video": {
-                            "src": null,
-                            "volume": false
-                          },
-                          "image": {
-                            "src": null,
-                            "fit": null,
-                            "repeat": null
-                          },
-                          "file": {
-                            "poster": null,
-                            "mp4": null,
-                            "webm": null,
-                            "volume": false
-                          }
-                        },
-                        carousel: {
-                          "enable": false,
-                          "pagination": false,
-                          "autoPlay": false,
-                          "items": 4,
-                          "singleItem": false,
-                          "lazyLoad": true,
-                          "lazyEffect": false,
-                          "addClassActive": true,
-                          "navigation": false,
-                          "navigationText": [null, null],
-                          "transitionStyle": false,
-                          "engineSrc": "http:\/\/mt-bebakery.magentheme.com\/js\/mt\/extensions\/jquery\/plugins\/owl-carousel\/owl.carousel.js"
-                        },
-                        carouselConfig: null,
-                        countdown: {
-                          "enable": false,
-                          "yearText": "years",
-                          "monthText": "months",
-                          "weekText": "weeks",
-                          "dayText": "days",
-                          "hourText": "hours",
-                          "minText": "mins",
-                          "secText": "secs",
-                          "yearSingularText": "year",
-                          "monthSingularText": "month",
-                          "weekSingularText": "week",
-                          "daySingularText": "day",
-                          "hourSingularText": "hour",
-                          "minSingularText": "min",
-                          "secSingularText": "sec",
-                          "engineSrc": "http:\/\/mt-bebakery.magentheme.com\/js\/mt\/extensions\/jquery\/plugins\/jquery.jcountdown.min.js"
-                        },
-                        countdownConfig: null,
-                        kenburns: {
-                          "enable": false,
-                          "images": [],
-                          "overlay": null,
-                          "engineSrc": "http:\/\/mt-bebakery.magentheme.com\/js\/mt\/extensions\/jquery\/plugins\/kenburns.js"
-                        }
-                      });
-                    </script> 
          </div> 
          <script type="text/javascript">
                     var lifetime = 3600;
@@ -797,58 +726,6 @@
           </div> 
           <script type="text/javascript" src="js/frontend.js">
                     </script> 
-          <script type="text/javascript">
-                      new MT.Widget('widget-e7922fc64767df69c432eaf0d4b1f5e4', {
-                        animation: {
-                          "enable": false,
-                          "animationName": null,
-                          "animationDelay": 300,
-                          "itemSelector": null,
-                          "engineSrc": "http:\/\/localhost:8088\/sweet\/js\/wow.js"
-                        },
-                        parallax: {
-                          "enable": false,
-                          "type": null,
-                          "overlay": null,
-                          "video": {
-                            "src": null,
-                            "volume": false
-                          },
-                          "image": {
-                            "src": null,
-                            "fit": null,
-                            "repeat": null
-                          },
-                          "file": {
-                            "poster": null,
-                            "mp4": null,
-                            "webm": null,
-                            "volume": false
-                          }
-                        },
-                        carousel: {
-                          "enable": false,
-                          "pagination": false,
-                          "autoPlay": false,
-                          "items": 4,
-                          "singleItem": false,
-                          "lazyLoad": true,
-                          "lazyEffect": false,
-                          "addClassActive": true,
-                          "navigation": false,
-                          "navigationText": [null, null],
-                          "transitionStyle": false,
-                          "engineSrc": "http:\/\/localhost:8088\/sweet\/js\/owl.carousel.js"
-                        },
-                        carouselConfig: null,
-                        kenburns: {
-                          "enable": false,
-                          "images": [],
-                          "overlay": null,
-                          "engineSrc": "http:\/\/localhost:8088\/sweet\/js\/kenburns.js"
-                        }
-                      });
-                    </script> 
          </div> 
          <div class="" id="widget-a2332aacf77e91334b297efdec5a07e1"> 
           <div class=""> 
@@ -864,58 +741,6 @@
            </div> 
           </div> 
           <script type="text/javascript" src="js/frontend.js">
-                    </script> 
-          <script type="text/javascript">
-                      new MT.Widget('widget-a2332aacf77e91334b297efdec5a07e1', {
-                        animation: {
-                          "enable": false,
-                          "animationName": null,
-                          "animationDelay": 300,
-                          "itemSelector": null,
-                          "engineSrc": "http:\/\/localhost:8088\/sweet\/js\/wow.js"
-                        },
-                        parallax: {
-                          "enable": false,
-                          "type": null,
-                          "overlay": null,
-                          "video": {
-                            "src": null,
-                            "volume": false
-                          },
-                          "image": {
-                            "src": null,
-                            "fit": null,
-                            "repeat": null
-                          },
-                          "file": {
-                            "poster": null,
-                            "mp4": null,
-                            "webm": null,
-                            "volume": false
-                          }
-                        },
-                        carousel: {
-                          "enable": false,
-                          "pagination": false,
-                          "autoPlay": false,
-                          "items": 4,
-                          "singleItem": false,
-                          "lazyLoad": true,
-                          "lazyEffect": false,
-                          "addClassActive": true,
-                          "navigation": false,
-                          "navigationText": [null, null],
-                          "transitionStyle": false,
-                          "engineSrc": "http:\/\/localhost:8088\/sweet\/js\/owl.carousel.js"
-                        },
-                        carouselConfig: null,
-                        kenburns: {
-                          "enable": false,
-                          "images": [],
-                          "overlay": null,
-                          "engineSrc": "http:\/\/localhost:8088\/sweet\/js\/kenburns.js"
-                        }
-                      });
                     </script> 
          </div> 
         </div> 
