用户地址修改
设置默认收货地址

--- a/user_address.html
+++ b/user_address.html
@@ -826,6 +826,9 @@
                                 class="input-text  required-entry" />
                               </div>
                             </li>
+                            <li class="control">
+                                    <input type="checkbox" id="primary_billing" name="default_billing" value="1" title="Use as My Default Billing Address" class="checkbox"><label for="primary_billing">设为默认收货地址</label>
+                            </li>
                           </ul>
                         </div>
                         <div class="buttons-set">
