支付第一界面完成

--- a/checkout_address.html
+++ b/checkout_address.html
@@ -639,49 +639,7 @@
           <div class="container-main">
             <div class="main-content container">
               <div class="row main">
-                <div class="col-lg-3 col-md-3 col-sm-3 col-pull-3">
-                  <div class="col-left sidebar">
-                    <div class="block block-account">
-                      <div class="block-title">
-                        <strong>
-                          <span>
-                           我的账号
-                          </span>
-                        </strong>
-                      </div>
-                      <div class="block-content">
-                        <ul>
-                          <li>
-                            <a href="user_center.html">
-                              欢迎页
-                            </a>
-                          </li>
-                          <li>
-                            <a href="user_account.html">
-                              账户信息
-                            </a>
-                          </li>
-                          <li class="current">
-                            <strong>
-                              收货地址
-                            </strong>
-                          </li>
-                          <li>
-                            <a href="user_myorder.html">
-                             我的订单
-                            </a>
-                          </li>
-                          <li>
-                            <a href="user_store.html">
-                              我的收藏
-                            </a>
-                          </li>
-                        </ul>
-                      </div>
-                    </div>
-                  </div>
-                </div>
-                <div class="col-lg-9 col-md-9 col-sm-9 col-push-9 col-xs-12">
+                <div class="col-lg-6 col-md-3 col-sm-3 col-pull-3">
                   <div class="col-main">
                     <div class="my-account">
                       <div class="page-title">
@@ -832,18 +790,188 @@
                           <p class="required">
                             * 必填字段
                           </p>
-                          <p class="back-link">
-                            <a href="#">
-                              <small>
-                                &laquo;
-                              </small>
-                              返回
-                            </a>
+                          <button type="submit" title="Save Address" class="button">
+                            <span>
+                              <span>
+                               配送到这个地址
+                              </span>
+                            </span>
+                          </button>
+                           <button type="submit" title="Save Address" class="button">
+                            <span>
+                              <span>
+                               删除
+                              </span>
+                            </span>
+                          </button>
+                        </div>
+                      </form>
+            
+                    </div>
+                  </div>
+                </div>
+                <div class="col-lg-6 col-md-9 col-sm-9 col-push-9 col-xs-12">
+                  <div class="col-main">
+                    <div class="my-account">
+                      <div class="page-title">
+                        <h1>
+                          新收货地址
+                        </h1>
+                      </div>
+                      <form action="#"
+                      method="post" id="form-validate">
+                        <div class="fieldset">
+                          <input name="form_key" type="hidden" value="8a2Cziyu6JzZquBf" />
+                          <input type="hidden" name="success_url" value="" />
+                          <input type="hidden" name="error_url" value="" />
+                          <h2 class="legend">
+                            联系信息
+                          </h2>
+                          <ul class="form-list">
+                            <li class="fields">
+                              <div class="customer-name">
+                                <div class="field name-firstname">
+                                  <label for="firstname" class="required">
+                                    <em>
+                                      *
+                                    </em>
+                                    姓名
+                                  </label>
+                                  <div class="input-box">
+                                    <input type="text" id="firstname" name="firstname" value="" title=""
+                                    maxlength="255" class="input-text required-entry" />
+                                  </div>
+                                </div>
+                              </div>
+                            </li>
+                            <li class="fields">
+                              <div class="field">
+                                <label for="telephone" class="required">
+                                  <em>
+                                    *
+                                  </em>
+                                  电话
+                                </label>
+                                <div class="input-box">
+                                  <input type="text" name="telephone" value="" title="Telephone" class="input-text   required-entry"
+                                  id="telephone" />
+                                </div>
+                              </div>
+                              <div class="field">
+                                <label for="fax">
+                                 邮政编码
+                                </label>
+                                <div class="input-box">
+                                  <input type="text" name="fax" id="fax" title="Fax" value="" class="input-text "
+                                  />
+                                </div>
+                              </div>
+                            </li>
+                          </ul>
+                        </div>
+                        <div class="fieldset">
+                          <h2 class="legend">
+                            地址
+                          </h2>
+                          <ul class="form-list">
+                            <li class="fields">
+                              <div class="field">
+                                <label for="country" class="required">
+                                  <em>
+                                    *
+                                  </em>
+                                  省份
+                                </label>
+                                <div class="input-box">
+                                  <select name="country_id" id="country" class="validate-select" title="省份">
+                                    <option value="">
+                                    </option>
+                                    <option value="AF">
+                                      河北
+                                    </option>
+                                    <option value="AX">
+                                      北京
+                                    </option>
+                                  </select>
+                                </div>
+                              </div>
+                            </li>
+                            <li class="fields">
+                              <div class="field">
+                                <label for="country" class="required">
+                                  <em>
+                                    *
+                                  </em>
+                                  城市
+                                </label>
+                                <div class="input-box">
+                                  <select name="" id="" class="validate-select" title="Country">
+                                    <option value="">
+                                    </option>
+                                    <option value="AF">
+                                      石家庄
+                                    </option>
+                                    <option value="AX">
+                                      邢台
+                                    </option>
+                                    <option value="AX">
+                                      邯郸
+                                    </option>
+                                  </select>
+                                </div>
+                              </div>
+                            </li>
+                                <li class="fields">
+                              <div class="field">
+                                <label for="country" class="required">
+                                  <em>
+                                    *
+                                  </em>
+                                  区县
+                                </label>
+                                <div class="input-box">
+                                  <select name="" id="" class="validate-select" title="Country">
+                                    <option value="">
+                                    </option>
+                                    <option value="AF">
+                                      长安区
+                                    </option>
+                                    <option value="AX">
+                                      桥东区
+                                    </option>
+                                  </select>
+                                </div>
+                              </div>
+                            </li>
+                            <li class="wide">
+                              <label for="street_1" class="required">
+                                <em>
+                                  *
+                                </em>
+                                详细地址
+                              </label>
+                              <div class="input-box">
+                                <input type="text" name="street[]" value="" title="Street Address" id="street_1"
+                                class="input-text  required-entry" />
+                              </div>
+                            </li>
+                          </ul>
+                        </div>
+                        <div class="buttons-set">
+                          <p class="required">
+                            * 必填字段
                           </p>
                           <button type="submit" title="Save Address" class="button">
                             <span>
                               <span>
-                               保存
+                               配送到这个地址
+                              </span>
+                            </span>
+                          </button>
+                          <button type="submit" title="Save Address" class="button">
+                            <span>
+                              <span>
+                               删除
                               </span>
                             </span>
                           </button>
