--- a/user_address_show.html
+++ b/user_address_show.html
@@ -591,17 +591,6 @@
                             </div>
                         </div>
                     </div>
-                    <script type="text/javascript">
-                        // $mt(window).load(function() {
-                        //     $mt("#mt-sticky-header").sticky({
-                        //         topSpacing: 0
-                        //     });
-                        //     var $logoImg = $mt('.mt-wrapper .header .logo img');
-                        //     if ($logoImg.css('min-height') == '1px') {
-                        //         $logoImg.attr('src', $logoImg.attr('src').replace('logo.png', 'logo_1.png'));
-                        //     }
-                        // });
-                    </script>
                 </header>
                 <section class="main-container col2-left-layout">
                   <div class="show-grid-slide show-slide-all">
@@ -716,11 +705,7 @@
                                         <br />
                                         地址：北京市朝阳区东坝中路奥林匹克花园
                                       </address>
-                                      <p>
-                                        <a href="user_address.html">
-                                          修改地址信息
-                                        </a>
-                                      </p>
+                                     <p><a href="user_address.html">修改地址信息</a> <span class="separator">|</span> <a href="#" class="link-remove" onclick="return deleteAddress('1');">设为默认地址</a></p>
                                     </li>
                                   </ol>
                                 </div>
