--- a/check_out.html
+++ b/check_out.html
@@ -21,8 +21,7 @@
           <!--[if lt IE 7]>
             <script type="text/javascript">
               //<![CDATA[
-              var BLANK_URL = 'http://mt-bebakery.magentheme.com/js/blank.html';
-              var BLANK_IMG = 'http://mt-bebakery.magentheme.com/js/spacer.gif';
+              var BLANK_IMG = 'images/spacer.gif';
               //]]>
               
             </script>
