--- a/detail.html
+++ b/detail.html
@@ -19,7 +19,7 @@
   <!--[if lt IE 7]>
             <script type="text/javascript">
               //<![CDATA[
-              var BLANK_URL = 'js/blank.html';
+              var BLANK_URL = '';
               var BLANK_IMG = 'js/spacer.gif';
               //]]>
               
@@ -209,7 +209,7 @@
         <li class="level1 item nav-1-2 last parent"> <a href="#"> <span> 商务 </span> </a> </li> 
         <li class="level1 item nav-1-2 last parent"> <a href="#"> <span> 回礼 </span> </a> </li> 
        </ul> </li> 
-      <li class="level0 nav-2 level-top"> <a href="#" class="level-top"> <span> 食材 </span> </a> </li> 
+      <li class="level0 nav-2 level-top"> <a href="food.html" class="level-top"> <span> 食材 </span> </a> </li> 
       <li class="level0 nav-3 level-top"> <a href="#" class="level-top"> <span> FAQ </span> </a> </li> 
       <li class="level0 nav-4 level-top last"> <a href="#" class="level-top"> <span> 配送说明 </span> </a> </li> 
      </ul> 
@@ -311,7 +311,7 @@
                     </div> 
                    </div> 
                   </div> </li> 
-                 <li class="level0 nav-2 level-top"> <a href="#" class="level-top"> <span> 食材 </span> </a> </li> 
+                 <li class="level0 nav-2 level-top"> <a href="food.html" class="level-top"> <span> 食材 </span> </a> </li> 
                  <li class="level0 nav-3 level-top"> <a href="#" class="level-top"> <span> FAQ </span> </a> </li> 
                  <li class="level0 level-top parent custom-block  menu-item-right"> <a href="#" class="level-top"> <span> 配送说明 </span> </a> </li> 
                 </ul> 
