--- a/index.html
+++ b/index.html
@@ -273,7 +273,7 @@
                             </ul>
                         </li>
                         <li class="level0 nav-2 level-top">
-                            <a href="#" class="level-top">
+                            <a href="food.html" class="level-top">
                                 <span>
                                    食材
                                 </span>
@@ -482,7 +482,7 @@
                                                                             </div>
                                                                         </li>
                                                                         <li class="level0 nav-2 level-top">
-                                                                            <a href="#"
+                                                                            <a href="food.html"
                                                                             class="level-top">
                                                                                 <span>
                                                                                     食材
