--- a/cart.html
+++ b/cart.html
@@ -297,7 +297,7 @@
                             </ul>
                         </li>
                         <li class="level0 nav-2 level-top">
-                            <a href="#" class="level-top">
+                            <a href="food.html" class="level-top">
                                 <span>
                                    食材
                                 </span>
@@ -506,7 +506,7 @@
                                                                             </div>
                                                                         </li>
                                                                         <li class="level0 nav-2 level-top">
-                                                                            <a href="#"
+                                                                            <a href="food.html"
                                                                             class="level-top">
                                                                                 <span>
                                                                                     食材
