--- a/check_out.html
+++ b/check_out.html
@@ -300,7 +300,7 @@
                             </ul>
                         </li>
                         <li class="level0 nav-2 level-top">
-                            <a href="#" class="level-top">
+                            <a href="food.html" class="level-top">
                                 <span>
                                    食材
                                 </span>
@@ -509,7 +509,7 @@
                                                                     </div>
                                                                 </li>
                                                                 <li class="level0 nav-2 level-top">
-                                                                    <a href="#"
+                                                                    <a href="food.html"
                                                                     class="level-top">
                                                                         <span>
                                                                             食材
