--- a/user_address_show.html
+++ b/user_address_show.html
@@ -291,7 +291,7 @@
                             </ul>
                         </li>
                         <li class="level0 nav-2 level-top">
-                            <a href="#" class="level-top">
+                            <a href="food.html" class="level-top">
                                 <span>
                                    食材
                                 </span>
@@ -500,7 +500,7 @@
                                                                             </div>
                                                                         </li>
                                                                         <li class="level0 nav-2 level-top">
-                                                                            <a href="#"
+                                                                            <a href="food.html"
                                                                             class="level-top">
                                                                                 <span>
                                                                                     食材
