--- a/user_center.html
+++ b/user_center.html
@@ -293,7 +293,7 @@
                      </ul>
                  </li>
                  <li class="level0 nav-2 level-top">
-                     <a href="#" class="level-top">
+                     <a href="food.html" class="level-top">
                          <span>
                             食材
                          </span>
@@ -516,7 +516,7 @@
                                                                     </div>
                                                                 </li>
                                                                 <li class="level0 nav-2 level-top">
-                                                                    <a href="#"
+                                                                    <a href="food.html"
                                                                     class="level-top">
                                                                         <span>
                                                                             食材
