--- a/user_myorder.html
+++ b/user_myorder.html
@@ -292,7 +292,7 @@
                             </ul>
                         </li>
                         <li class="level0 nav-2 level-top">
-                            <a href="#" class="level-top">
+                            <a href="food.html" class="level-top">
                                 <span>
                                    食材
                                 </span>
@@ -501,7 +501,7 @@
                                                                             </div>
                                                                         </li>
                                                                         <li class="level0 nav-2 level-top">
-                                                                            <a href="#"
+                                                                            <a href="food.html"
                                                                             class="level-top">
                                                                                 <span>
                                                                                     食材
