faq界面制作完成

--- a/faq.html
+++ b/faq.html
@@ -28,6 +28,7 @@
             </script>
           <![endif]-->
           <link rel="stylesheet" type="text/css" href="css/home.css" />
+          <link rel="stylesheet" type="text/css" href="css/cate.css" />
           <link rel="stylesheet" type="text/css" href="css/owl.carousel.css" />
           <link rel="stylesheet" type="text/css" href="css/owl.theme.css" />
           <link rel="stylesheet" type="text/css" href="css/owl.transitions.css"
@@ -602,12 +603,92 @@
                   <div class="col-main">
                     <div class="page-title">
                       <h1>
-                        搜索 '薇茜甜点'
+                        FAQ
                       </h1>
                     </div>
-                    <p class="note-msg">
-                      没有搜索到相关内容
-                    </p>
+                    <ul class="simple-faq">
+                          <li>
+                            <a href="#faq-details-23">
+                              我如何订一个蛋糕?
+                            </a>
+                            <br/>
+                            <span class="sf-answer"></span>
+                          </li>
+                          <li>
+                              <a href="#faq-details-26">
+                                你的退款和取消政策是什么？
+                              </a>
+                              <br/>
+                              <span class="sf-answer"></span>
+                          </li>
+                          <li>
+                              <a href="#faq-details-13">
+                                为什么选择薇茜甜点?
+                              </a>
+                              <br/>
+                              <span class="sf-answer"></span>
+                          </li>
+                          <li>
+                              <a href="#faq-details-16">
+                                蛋糕、饼干和巧克力,我可以在任何时候选择?
+                              </a>
+                              <br/>
+                              <span class="sf-answer"></span>
+                          </li>
+                        </ul>
+                        <ul class="faq-details">
+                          <li>
+                            <a name="faq-details-23">
+                            </a>
+                            <h3>
+                              我如何订一个蛋糕?
+                            </h3>
+                            <br/>
+                            <p class="sf-answer">
+                              所有蛋糕订单可以发电子邮件给我们,这是更快和更高效的服务比面对面咨询。所有的邮件都回复在12小时内,我们的一个设计师,所以如果你已经有了一个主意你想要的,只是去我们的联系我们页面并完成表格我们很乐意给你一个报价。如果你想订货,我们需要一个完整的储备你的付款日期。
+                            </p>
+                            <p class="sf-answer">
+                              所有蛋糕订单可以发电子邮件给我们,这是更快和更高效的服务比面对面咨询。所有的邮件都回复在12小时内,我们的一个设计师,所以如果你已经有了一个主意你想要的,只是去我们的联系我们页面并完成表格我们很乐意给你一个报价。如果你想订货,我们需要一个完整的储备你的付款日期。
+                            </p>
+                          </li>
+                          <li>
+                            <a name="faq-details-26">
+                            </a>
+                            <h3>
+                               你的退款和取消政策是什么？
+                            </h3>
+                            <p class="sf-answer">
+                              所有蛋糕订单可以发电子邮件给我们,这是更快和更高效的服务比面对面咨询。所有的邮件都回复在12小时内,我们的一个设计师,所以如果你已经有了一个主意你想要的,只是去我们的联系我们页面并完成表格我们很乐意给你一个报价。如果你想订货,我们需要一个完整的储备你的付款日期。
+                            </p>
+                            <p class="sf-answer">
+                              所有蛋糕订单可以发电子邮件给我们,这是更快和更高效的服务比面对面咨询。所有的邮件都回复在12小时内,我们的一个设计师,所以如果你已经有了一个主意你想要的,只是去我们的联系我们页面并完成表格我们很乐意给你一个报价。如果你想订货,我们需要一个完整的储备你的付款日期。
+                            </p>
+                          </li>
+                          <li>
+                            <a name="faq-details-13">
+                            </a>
+                            <h3>
+                                为什么选择薇茜甜点?
+                            </h3>
+                            <br/>
+                             <p class="sf-answer">
+                              我们的创造力、激情、对细节的关注和优质成分在烘焙——都让我们使用甜巷蛋糕异常和独特的。我们热爱我们所做的和我们把小时的努力和专业知识在规划和设计你的蛋糕和烤它用最大的爱和关心想出一个,值得你所有的核心庆祝活动。与你携手在每一步,我们的作品将超过你的期望每一个时间!
+                            </p>
+                            <br/>
+                          </li>
+                          <li>
+                            <a name="faq-details-16">
+                            </a>
+                            <h3>
+                              蛋糕、饼干和巧克力,我可以在任何时候选择?
+                            </h3>
+                            <br/>
+                             <p class="sf-answer">
+                              我们有一个陈列柜purchase-cupcakes每天充满了糖果,巧克力,专业蛋糕,甜咬。你可以停止在我们的营业时间和购买这些物品。
+                            </p>
+                            <br/>
+                          </li>
+                        </ul>
                   </div>
                 </div>
                 <div class="col-lg-3 col-md-3 col-sm-3">
