搜索样式修改

--- a/check_out.html
+++ b/check_out.html
@@ -586,9 +586,36 @@
                                             <a href="" class="home-header-ico">
                                                 <i class="fa fa-weibo fa-lg"></i>
                                             </a>
-                                            <a href="">
-                                                <i class="fa fa-search fa-lg"></i>  
-                                            </a>
+                                            <div class="top-seach pull-right">
+                                               <div class="quick-access">
+                                                 <form id="search_mini_form" action=""
+                                                 method="get">
+                                                   <div class="search-style">
+                                                     <div class="mt-icon-ajax" style="line-height: 26px;">
+                                                       <i class="fa fa-search" data-icon="U">
+                                                       </i>
+                                                     </div>
+                                                   </div>
+                                                   <div class="form-search" style="display: none;">
+                                                     <!--<label for="search"></label>-->
+                                                     <input id="search" type="text" name="q" value="" class="input-text" maxlength="128"
+                                                     autocomplete="off">
+                                                     <button type="submit" title="搜索" class="button">
+                                                       <span>
+                                                         <span>
+                                                           <span class="fs1" data-icon="U" aria-hidden="true">
+                                                           </span>
+                                                           &nbsp;
+                                                         </span>
+                                                       </span>
+                                                     </button>
+                                                     <div id="search_autocomplete" class="search-autocomplete" style="display: none;">
+                                                     </div>
+                                                    
+                                                   </div>
+                                                 </form>
+                                               </div>
+                                             </div>
                                         </div>
                                         <div>
                                             
