添加购物车 Signed-off-by: liugu <liuguww@qq.com>

--- a/check_out.html
+++ b/check_out.html
@@ -69,6 +69,8 @@
           />
           <link rel="stylesheet" type="text/css" href="css/print.css" media="print"
           />
+           <link rel="stylesheet" type="text/css" href="css/lanrenzhijia.css" media="all"
+          />
           <!-- date -->
           <script type="text/javascript" src="js/prototype.js">
           </script>
