--- a/cart.html
+++ b/cart.html
@@ -209,7 +209,7 @@
             <li class="level0 nav-1 level-top first parent">
               <i class="fa fa-angle-down">
               </i>
-              <a href="#" class="level-top">
+              <a href="product_list.html" class="level-top">
                 <span>
                   系列
                 </span>
@@ -248,7 +248,7 @@
             <li class="level0 nav-1 level-top first parent">
               <i class="fa fa-angle-down">
               </i>
-              <a href="#" class="level-top">
+              <a href="product_list2.html" class="level-top">
                 <span>
                   用途
                 </span>
@@ -299,7 +299,7 @@
               </a>
             </li>
             <li class="level0 nav-3 level-top">
-              <a href="#" class="level-top">
+              <a href="faq.html" class="level-top">
                 <span>
                   FAQ
                 </span>
@@ -379,7 +379,7 @@
                                   <li class="level0 active nav-1 level-top first parent parent-sub">
                                     <i class="fa fa-angle-down">
                                     </i>
-                                    <a href="#" class="level-top">
+                                    <a href="product_list2.html" class="level-top">
                                       <span>
                                         系列
                                       </span>
@@ -436,7 +436,7 @@
                                   <li class="level0 nav-1 level-top first parent parent-sub">
                                     <i class="fa fa-angle-down">
                                     </i>
-                                    <a href="#" class="level-top">
+                                    <a href="product_list.html" class="level-top">
                                       <span>
                                         用途
                                       </span>
@@ -505,14 +505,14 @@
                                     </a>
                                   </li>
                                   <li class="level0 nav-3 level-top">
-                                    <a href="#" class="level-top">
+                                    <a href="faq.html" class="level-top">
                                       <span>
                                         FAQ
                                       </span>
                                     </a>
                                   </li>
                                   <li class="level0 level-top parent custom-block  menu-item-right">
-                                    <a href="#" class="level-top">
+                                    <a href="instruct.html" class="level-top">
                                       <span>
                                         配送说明
                                       </span>
@@ -541,7 +541,7 @@
                             <div class="border-left">
                             </div>
                             <div class="mt-icon-ajaxcart">
-                              <a class="mt-cart-label home-reg" href="#">
+                              <a class="mt-cart-label home-reg" href="create_account.html">
                                 注册
                               </a>
                             </div>
@@ -555,7 +555,7 @@
                           <div id="search_mini_form" action="#" method="get">
                             <div class="search-style">
                               <div class="mt-icon-ajax">
-                                登入
+                               <a href="login.html">登入</a>
                               </div>
                             </div>
                           </div>
