--- a/user_store.html
+++ b/user_store.html
@@ -869,7 +869,7 @@
                              }
 
                              function confirmRemoveWishlistItem() {
-                               return confirm('Are you sure you want to remove this product from your wishlist?');
+                               return confirm('你想删除这个收藏');
                              }
                              //]]>
                              
