用户登录修复
Signed-off-by: liugu <liuguww@qq.com>

--- a/login.html
+++ b/login.html
@@ -114,6 +114,10 @@
           </script>
           <script type="text/javascript" src="js/weee.js">
           </script>
+          <script type="text/javascript" src="js/lanrenzhijia.js">
+          </script>
+          <link rel="stylesheet" type="text/css" href="css/lanrenzhijia.css"
+          media="all" />
           <!--[if lt IE 8]>
             <link rel="stylesheet" type="text/css" href="css/styles-ie.css"
             media="all" />
