--- a/index.html
+++ b/index.html
@@ -192,7 +192,7 @@
                         <li class="level0 nav-1 level-top first parent">
                             <i class="fa fa-angle-down">
                             </i>
-                            <a href="#" class="level-top">
+                            <a href="product_list.html" class="level-top">
                                 <span>
                                     系列
                                 </span>
